<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:dragEdge="right"
    app:mode="same_level">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editTextBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#d2691e"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/deleteTextBtn"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:background="#d269"
            android:gravity="center"
            android:text="@string/delete"
            android:textColor="#ffffff" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/recyclerBackground">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:buttonTint="@android:color/black" />

        <TextView
            android:id="@+id/noteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/checkbox"
            android:hint="@string/title"
            android:textColor="@color/recTextBackground"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/noteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noteTitle"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/checkbox"
            android:hint="@string/description"
            android:textColor="@color/recTextBackground"
            android:textSize="16sp" />
    </RelativeLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>